--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Arimo&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -73,57 +74,42 @@
 	<div class="work">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h1>hello<span style="color:#F65846; font-family: 'Montserrat', sans-serif;">!</span></h1>
+				<h1>design philosophy<span style="color:#F65846; font-family: 'Montserrat', sans-serif;">.</span></h1>
 										</div>
 		<div class="row">
-		<div class="col-lg-6 col-md-8 col-sm-10 col-xs-12">
-										<!-- <img src="images/intro.png" class="img-responsive" style="width:100%"> -->
-									</div>
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+			<!-- <img src="images/me.jpg" width=100% alt="me at brooklyn"> -->
+			<a href="https://www.linkedin.com/in/mkimdesign/" target="_blank" class="linkforfooter w-inline-block">
+				<div class="navi-link foot">LINKEDIN</div>
+			</a>
+			<a href="https://kminjin.github.io/documents/michellekim_resume.pdf" target="_blank" class="linkforfooter w-inline-block">
+				<div class="navi-link foot">RESUME</div>
+			</a>
+			<a href="mailto:minjin@umich.edu?subject=Hi%20Michelle" class="linkforfooter w-inline-block">
+				<div class="navi-link foot">EMAIL</div>
+			</a>
+		</div>
+									<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 
-
+<p style="font-family: 'Rubik', sans-serif;">I am a product designer who cares about the impact of my work as much as about the work itself. I strive to bring products of genuine worth to the market and my designs are always the result of needs made evident in discussions with those my design will affect. I am currently looking for full time product designer roles.</p>
+</div>
+<a target="_blank" href="http://kminjin.com/documents/michellekim.pdf"><button class="btn">Resume</button></a>
 
 
 					</div>
 </div>
 </section>
 
-	<section class="work">
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h1>fun<span style="color:#F65846; font-family: 'Amiko', sans-serif;">.
-					</span>
-					</h1>
-				</div>
-			</div>
-								<div class="row">
-									<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 
-										</div>
-									</div>
-
-									<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-
-
-								</div>
-							</div>
-
-
-									<div class="row">
-										<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-											<div class="project">
-
-											</div>
-										</div>
-
-
-										<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-
-
-									</div>
-									</div>
-
-
-</section>
+<a href="https://www.linkedin.com/in/mkimdesign/" target="_blank" class="linkforfooter w-inline-block">
+	<div class="navi-link foot">LINKEDIN</div>
+</a>
+<a href="https://kminjin.github.io/documents/michellekim_resume.pdf" target="_blank" class="linkforfooter w-inline-block">
+	<div class="navi-link foot">RESUME</div>
+</a>
+<a href="mailto:minjin@umich.edu?subject=Hi%20Michelle" class="linkforfooter w-inline-block">
+	<div class="navi-link foot">EMAIL</div>
+</a>
 
 <section id="about">
 	<div class="container">
