--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav navbar-right">
 				<li class="nav-menu-item active"><a href="index.html">WORK</a></li>
-				 <li class="nav-menu-item"><a href="about.html">ABOUT</a></li>
-				 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf">RESUME</a></li>
+				 <!-- <li class="nav-menu-item"><a href="about.html">ABOUT</a></li> -->
+				 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">RESUME</a></li>
 
 			</ul>
 		</div>
@@ -76,7 +76,9 @@
 				<h1>introduction<span style="color:#F65846; font-family: 'Montserrat', sans-serif;">.</span></h1>
 										</div>
 		<div class="row">
-		<div class="col-lg-6 col-md-8 col-sm-10 col-xs-12">
+		<div class="col-lg-7 col-md-8 col-sm-10 col-xs-12">
+			<p style="font-family: 'Rubik', sans-serif;">I am a product designer who cares about the impact of my work as much as about the work itself. I strive to bring products of genuine worth to the market and my designs are always the result of needs made evident in discussions with those my design will affect. I am currently looking for full time product designer roles.</p>
+
 										<img src="images/intro.png" class="img-responsive" style="width:100%">
 									</div>
 
