--- a/lexmark.html
+++ b/lexmark.html
@@ -52,9 +52,9 @@
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav navbar-right">
-					<li class="nav-menu-item"><a href="index.html">WORK</a></li>
-					 <li class="nav-menu-item"><a href="about.html">ABOUT</a></li>
-					 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf">RESUME</a></li>
+					<li class="nav-menu-item active"><a href="index.html">WORK</a></li>
+					 <!-- <li class="nav-menu-item"><a href="about.html">ABOUT</a></li> -->
+					 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">RESUME</a></li>
 
 				</ul>
 			</div>
