--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Arimo&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat:400,700|Playfair+Display|Rubik&display=swap" rel="stylesheet">
+
 
 </head>
 <body>
@@ -77,7 +79,7 @@
 										</div>
 		<div class="row">
 		<div class="col-lg-7 col-md-8 col-sm-10 col-xs-12">
-			<p style="font-family: 'Rubik', sans-serif;">I am a product designer who cares about the impact of my work as much as about the work itself. I strive to bring products of genuine worth to the market and my designs are always the result of needs made evident in discussions with those my design will affect. I am currently looking for full time product designer roles.</p>
+			<!-- <p style="font-family: 'Rubik', sans-serif; font-size:15px;">I am a product designer who cares about the impact of my work as much as about the work itself. I strive to bring products of genuine worth to the market and my designs are always the result of needs made evident in discussions with those my design will affect. I am currently looking for full time product designer roles.</p> -->
 
 										<img src="images/intro.png" class="img-responsive" style="width:100%">
 									</div>
