--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 										</div>
 		<div class="row">
 		<div class="col-lg-7 col-md-8 col-sm-10 col-xs-12">
-			<br><br><p style="font-family: 'Rubik', sans-serif; font-size:15px;">I am a product designer who cares about the impact of my work as much as about the work itself. <br><br>I strive to bring products of genuine worth to the market and my designs are always the result of needs made evident in discussions with those my design will affect. <br><br>I am currently looking for full time product designer roles.</p>
+			<br><br><p style="font-family: 'Rubik', sans-serif; font-size:15px;">I am a product designer who cares about the impact of my work as much as about the work itself. <br><br>I strive to bring products of genuine worth to the market and my designs are always the result of needs made evident in discussions with those my design will affect. </p><br>
 
 										<!-- <img src="images/intro.png" class="img-responsive" style="width:100%"> -->
 									</div>
