--- a/about.html
+++ b/about.html
@@ -60,8 +60,8 @@
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav navbar-right">
-				<li class="nav-menu-item active"><a href="index.html">WORK</a></li>
-				 <li class="nav-menu-item"><a href="about.html">ABOUT</a></li>
+				<li class="nav-menu-item"><a href="index.html">WORK</a></li>
+				 <li class="nav-menu-item active"><a href="about.html">ABOUT</a></li>
 				 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf">RESUME</a></li>
 
 			</ul>
@@ -74,82 +74,67 @@
 	<div class="work">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h1>design philosophy<span style="color:#F65846; font-family: 'Montserrat', sans-serif;">.</span></h1>
-										</div>
-		<div class="row">
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-			<!-- <img src="images/me.jpg" width=100% alt="me at brooklyn"> -->
-			<a href="https://www.linkedin.com/in/mkimdesign/" target="_blank" class="linkforfooter w-inline-block">
-				<div class="navi-link foot">LINKEDIN</div>
-			</a>
-			<a href="https://kminjin.github.io/documents/michellekim_resume.pdf" target="_blank" class="linkforfooter w-inline-block">
-				<div class="navi-link foot">RESUME</div>
-			</a>
-			<a href="mailto:minjin@umich.edu?subject=Hi%20Michelle" class="linkforfooter w-inline-block">
-				<div class="navi-link foot">EMAIL</div>
-			</a>
-		</div>
-									<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+				<h1>michelle<span style="color:#F65846; font-family: 'Montserrat', sans-serif;">?</span></h1>
+										<br></div>
 
-<p style="font-family: 'Rubik', sans-serif;">I am a product designer who cares about the impact of my work as much as about the work itself. I strive to bring products of genuine worth to the market and my designs are always the result of needs made evident in discussions with those my design will affect. I am currently looking for full time product designer roles.</p>
+		<div class="row">
+		<div class="col-lg-3 col-md-4 col-sm-5 col-xs-6">
+			<img src="images/intro.png" width=100% alt="me at brooklyn">
+
+		</div>
+									<div class="col-lg-9 col-md-8 col-sm-7 col-xs-12">
+
+<p style="font-family: 'Rubik', sans-serif; font-size: 15px;">
+<br><br>I'm a designer from Queens, NY currently refining my skills at the University of Michgan- Ann Arbor. I will be graduating this April with a MS in Human-Computer Interaction.<br><br>
+
+Cool things i've done include <br>
+<span style="color:#F65846; font-family: 'Montserrat', sans-serif; font-size: 20px;">1 </span> Speaking at the 2019 Drupal Conference about digital well-being and ridding designs of dark UX patterns<br>
+<span style="color:#F65846; font-family: 'Montserrat', sans-serif; font-size: 20px;">2 </span> Writing a medium article "Can Blind People Use Tinder" which went on to be featured on the UX Collective.<br><br>
+
+In my spare time, i'm either practicing motion design or climbing.
+
+</p>
+<div>
+	<br><a href="https://www.linkedin.com/in/mkimdesign/" target="_blank" class="linkforfooter w-inline-block">
+		<div class="navi-link">LINKEDIN</div>
+	</a>
+	<a href="https://medium.com/@mkimdesign" target="_blank" class="linkforfooter w-inline-block">
+		<div class="navi-link foot">MEDIUM</div>
+	</a>
+	<a href="mailto:minjin@umich.edu?subject=Hi%20Michelle" class="linkforfooter w-inline-block">
+		<div class="navi-link foot">EMAIL</div>
+	</a>
+
 </div>
-<a target="_blank" href="http://kminjin.com/documents/michellekim.pdf"><button class="btn">Resume</button></a>
+</div>
+<!-- <a target="_blank" href="http://kminjin.com/documents/michellekim.pdf"><button class="btn">Resume</button></a> -->
 
 
 					</div>
+
+
+
 </div>
 </section>
 
 
-<a href="https://www.linkedin.com/in/mkimdesign/" target="_blank" class="linkforfooter w-inline-block">
-	<div class="navi-link foot">LINKEDIN</div>
-</a>
-<a href="https://kminjin.github.io/documents/michellekim_resume.pdf" target="_blank" class="linkforfooter w-inline-block">
-	<div class="navi-link foot">RESUME</div>
-</a>
-<a href="mailto:minjin@umich.edu?subject=Hi%20Michelle" class="linkforfooter w-inline-block">
-	<div class="navi-link foot">EMAIL</div>
-</a>
+<!-- <div class="work">
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<h1>ask me<span style="color:#F65846; font-family: 'Montserrat', sans-serif;">.</span></h1>
+									</div>
+	<div class="row">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<br><br><p style="font-family: 'Rubik', sans-serif; font-size:15px;">I am an avid climber. Rock climbing is not just a hobby to me... it's a lifestyle! Cheesy, but true.<br><br> My mom still thinks i'm going to medical school one day. I assure you, I won't.</p><br>
 
-<section id="about">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-				<img src="images/me.jpg" width=100% alt="me at brooklyn">
-			</div>
-		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 gelasio">
-			<h1 class="amiko">EDUCATION</h1>
-			<h2>University of Michigan - Ann Arbor</h2>
-			<p>M.S. Human Computer Interaction</p>
-			<h5>2020</h5>
-				<hr align="left">
-			<h2>University of Michigan - Ann Arbor</h2>
-			<p>B.S. Biopsychology & Cognition</p>
-			<h5>2018</h5>
 
-		</div>
 
-		<div class="col-lg-1 col-md-1 col-sm-1 col-xs-12 gelasio">
-		</div>
 
-		<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 gelasio">
-			<h1 class="amiko">EXPERIENCE</h1>
-			<h2>Lexmark</h2>
-			<p>UX Design Intern</p>
-			<h5>may-aug 2019</h5>
-			<hr align="left">
-			<h2>Comerica Bank</h2>
-			<p>UX Researcher</p>
-			<h5>jan-april 2019</h5>
-			<hr align="left">
-			<a target="_blank" href="http://kminjin.com/documents/michellekim.pdf"><button class="btn">Resume</button></a>
 
-		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 gelasio">
-		</div>
-		</div>
-	</div>
-</section>
+				</div>
+</div> -->
+
+
 
 <!-- footer section -->
 <footer>
