--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
 
 Cool things i've done include <br>
 <span style="color:#F65846; font-family: 'Montserrat', sans-serif; font-size: 20px;">1 </span> Speaking at the 2019 Drupal Conference about digital well-being and ridding designs of dark UX patterns<br>
-<span style="color:#F65846; font-family: 'Montserrat', sans-serif; font-size: 20px;">2 </span> Writing a medium article "Can Blind People Use Tinder" which went on to be featured on the UX Collective.<br><br>
+<span style="color:#F65846; font-family: 'Montserrat', sans-serif; font-size: 20px;">2 </span> Writing a medium article "Can Blind People Use Tinder?" which was featured on the UX Collective<br><br>
 
 In my spare time, i'm either practicing motion design or climbing.
 
@@ -107,12 +107,7 @@ In my spare time, i'm either practicing motion design or climbing.
 
 </div>
 </div>
-<!-- <a target="_blank" href="http://kminjin.com/documents/michellekim.pdf"><button class="btn">Resume</button></a> -->
-
-
 					</div>
-
-
 
 </div>
 </section>
@@ -138,13 +133,9 @@ In my spare time, i'm either practicing motion design or climbing.
 
 <!-- footer section -->
 <footer>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 col-sm-12">
 
-			</div>
-		</div>
-	</div>
+© Michelle Kim 2020
+
 </footer>
 
 
