--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<h1>design philosophy<span style="color:#F65846; font-family: 'Montserrat', sans-serif;">.</span></h1>
 										</div>
 		<div class="row">
-		<div class="col-lg-7 col-md-8 col-sm-10 col-xs-12">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<br><br><p style="font-family: 'Rubik', sans-serif; font-size:15px;">I am a product designer who cares about the impact of my work as much as about the work itself. <br><br>I strive to bring products of genuine worth to the market and my designs are always the result of needs made evident in discussions with those my design will affect. </p><br>
 
 										<!-- <img src="images/intro.png" class="img-responsive" style="width:100%"> -->
@@ -214,14 +214,11 @@
 </section> -->
 
 <!-- footer section -->
+<!-- footer section -->
 <footer>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 col-sm-12">
 
-			</div>
-		</div>
-	</div>
+© Michelle Kim 2020
+
 </footer>
 
 
