--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 	<div class="work">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h1>design philosophy<span style="color:#F65846; font-family: 'Montserrat', sans-serif;">.</span></h1>
+				<h2>design philosophy<span style="color:#F65846; font-family: 'Montserrat', sans-serif;">.</span></h2>
 										</div>
-		<div class="row">
+		<!-- <div class="row"> -->
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<br><br><p style="font-family: 'Rubik', sans-serif; font-size:15px;">I am a product designer who cares about the impact of my work as much as about the work itself. <br><br>I strive to bring products of genuine worth to the market and my designs are always the result of needs made evident in discussions with those my design will affect. </p><br>
 
@@ -85,9 +85,6 @@
 									</div>
 
 
-
-
-					</div>
 </div>
 </section>
 
@@ -96,12 +93,12 @@
 	<section class="work">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h1>selected projects<span style="color:#F65846; font-family: 'Montserrat', sans-serif;">.
+				<h2>selected projects<span style="color:#F65846; font-family: 'Montserrat', sans-serif;">.
 					</span>
-					</h1>
+				</h2>
 				</div>
 			</div>
-								<div class="row">
+								<!-- <div class="row"> -->
 									<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 										<div class="project">
 											<h1 class="number">01</h1>
@@ -134,10 +131,10 @@
 												</div>
 									</div>
 								</div>
-							</div>
 
 
-									<div class="row">
+
+									<!-- <div class="row"> -->
 										<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 											<div class="project">
 												<h1 class="number">03</h1>
@@ -168,7 +165,7 @@
 											</div>
 										</div>
 									</div>
-									</div>
+
 
 
 </section>
@@ -215,11 +212,11 @@
 
 <!-- footer section -->
 <!-- footer section -->
-<footer>
+<!-- <footer>
 
 © Michelle Kim 2020
 
-</footer>
+</footer> -->
 
 
 <!-- JAVASCRIPT JS FILES -->
