--- a/pawls.html
+++ b/pawls.html
@@ -185,7 +185,7 @@ Barking, whining, and other maladaptive noise-related behavior were among the mo
 </div><br><br><br><br>
 </section>
 
-		<section style="background-color: #EDEBAB; padding-bottom: 130px;"><br><br><br><br>
+		<section style="background-color: #E5EAFB; padding-bottom: 130px;"><br><br><br><br>
 					<div class="row">
 								<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp text-center" data-wow-delay=".2s">
 										<br><img src="images/pawlsinfo.png" class="img-responsive center" style="max-width:100%">
