--- a/vegout.html
+++ b/vegout.html
@@ -73,6 +73,7 @@
 					<h4 class="normal" style="font-family: 'Quicksand', sans-serif;">Oct 2019</h4>
 				</div>
 </div>
+<div><a href="https://kminjin.github.io/documents/vegout_flexport.pdf" class="deckbutton center">PDF Version</a></div>
 </div>
 
 </section>
