--- a/index.html
+++ b/index.html
@@ -72,59 +72,43 @@
 </head>
 
 <section id="introduction">
-	<div class="work">
-		<div class="row">
+	<div class="container">
+
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h2>design philosophy<span style="color:#F65846; font-family: 'Montserrat', sans-serif;">.</span></h2>
-										</div>
-		<!-- <div class="row"> -->
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-			<br><br><p style="font-family: 'Rubik', sans-serif; font-size:15px;">I am a product designer who cares about the impact of my work as much as about the work itself. <br><br>I strive to bring products of genuine worth to the market and my designs are always the result of needs made evident in discussions with those my design will affect. </p><br>
+				<h2>Hi, I'm Michelle- a product designer who is passionate about helping others by making intentional design decisions.</h2>
 
-										<!-- <img src="images/intro.png" class="img-responsive" style="width:100%"> -->
-									</div>
-
-
-</div>
+					<!-- <h2 style="font-family: 'Montserrat', sans-serif;">Hi. I'm Michelle, a product designer passionate about helping others by creating intentional designs.</h2> -->
+				</div></div>
 </section>
 
 
 
-	<section class="work">
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h2>selected projects<span style="color:#F65846; font-family: 'Montserrat', sans-serif;">.
-					</span>
-				</h2>
-				</div>
-			</div>
-								<!-- <div class="row"> -->
-									<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-										<div class="project">
-											<h1 class="number">01</h1>
-											<h1 style="font-family: 'Roboto', sans-serif;;">Helping People Eat Less Meat</h1>
-											<div class="tag">PRODUCT DESIGN</div>
+	<section id="work">
+			<div class="container">
+	<!-- <div class="content-wrapper"> -->
+									<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+
+										<div  style="background-color: #E0F0F6" class="project">
+											<!-- <div class="tag">PRODUCT DESIGN</div>
 											<div class="tag">PASSION PROJECT</div>
-											<div class="tag">2019</div>
+											<div class="tag">2019</div> -->
 											<div class="img-hover-zoom">
 												<a href="vegout.html">
 													<div>
 														<img style="width:100%" src="images/vegoutindex.png">
 													</div>
 												</a>
-											</div>
+											<!-- </div> -->
 										</div>
 									</div>
+								</div>
 
-									<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+									<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 
-										<div class="project">
-											<h1 class="number">02</h1>
-
-											<h1 style="font-family: 'Roboto', sans-serif;">Helping ServiceNow Service Now</h1>
-											<div class="tag">INTERNSHIP</div>
+										<div style="background-color: #E3F0E6" class="project">
+											<!-- <div class="tag">INTERNSHIP</div>
 											<div class="tag">UX DESIGN</div>
-											<div class="tag">2019</div>
+											<div class="tag">2019</div> -->
 											<div class="img-hover-zoom">
 											<a href="lexmark.html"><img style="width:100%" src="images/lexmarkindex.png">
 											</a>
@@ -135,13 +119,12 @@
 
 
 									<!-- <div class="row"> -->
-										<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-											<div class="project">
-												<h1 class="number">03</h1>
-												<h1 style="font-family: 'Roboto', sans-serif;">Decreasing Disruptive Barking</h1>
-													<div class="tag">PERVASIVE COMPUTING</div>
+										<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+											<div style="background-color: #E5EAFB" class="project">
+												<!-- <h1 class="number">03</h1> -->
+													<!-- <div class="tag">PERVASIVE COMPUTING</div>
 													<div class="tag">USER RESEARCH</div>
-													<div class="tag">2019</div>
+													<div class="tag">2019</div> -->
 										<div class="img-hover-zoom">
 											<a href="pawls.html"><img style="width:100%" src="images/pawlsindex.png" alt="Veg Out"></a>
 
@@ -151,15 +134,15 @@
 										</div>
 
 
-										<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+										<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 
-											<div class="project">
-												<h1 class="number">04</h1>
-													<h1 style="font-family: 'Roboto', sans-serif;">Educational VR Gardening App</h1>
+											<div  style="background-color: #FFE3E3" class="project">
+												<!-- <h1 class="number">04</h1> -->
+													<!-- <h1 style="font-family: 'Roboto', sans-serif;">Educational VR Gardening App</h1> -->
 
-												<div class="tag">VIRTUAL REALITY</div>
+												<!-- <div class="tag">VIRTUAL REALITY</div>
 												<div class="tag">COURSE PROJECT</div>
-												<div class="tag">2019</div>
+												<div class="tag">2019</div> -->
 												<div class="img-hover-zoom">
 													<a href="garden.html" ><img style="width:100%" src="images/gardenindex.png" alt="Veg Out"></a></div>
 											</div>
@@ -167,56 +150,11 @@
 									</div>
 
 
-
+</div>
 </section>
 
-<!-- <section id="about">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-				<img src="images/me.jpg" width=100% alt="me at brooklyn">
-			</div>
-		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 gelasio">
-			<h1 class="amiko">EDUCATION</h1>
-			<h2>University of Michigan - Ann Arbor</h2>
-			<p>M.S. Human Computer Interaction</p>
-			<h5>2020</h5>
-				<hr align="left">
-			<h2>University of Michigan - Ann Arbor</h2>
-			<p>B.S. Biopsychology & Cognition</p>
-			<h5>2018</h5>
 
-		</div>
 
-		<div class="col-lg-1 col-md-1 col-sm-1 col-xs-12 gelasio">
-		</div>
-
-		<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 gelasio">
-			<h1 class="amiko">EXPERIENCE</h1>
-			<h2>Lexmark</h2>
-			<p>UX Design Intern</p>
-			<h5>may-aug 2019</h5>
-			<hr align="left">
-			<h2>Comerica Bank</h2>
-			<p>UX Researcher</p>
-			<h5>jan-april 2019</h5>
-			<hr align="left">
-			<a target="_blank" href="http://kminjin.com/documents/michellekim.pdf"><button class="btn">Resume</button></a>
-
-		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 gelasio">
-		</div>
-		</div>
-	</div>
-</section> -->
-
-<!-- footer section -->
-<!-- footer section -->
-<!-- <footer>
-
-© Michelle Kim 2020
-
-</footer> -->
 
 
 <!-- JAVASCRIPT JS FILES -->
@@ -250,6 +188,11 @@ var currentScrollPos = window.pageYOffset;
 
 </script>
 
+	<div class="container">
+<footer id="footer">
+	© 2020 Designed & Coded by Michelle Kim
+</footer>
+</div>
 
 
 </body>
