--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 											<div class="tag">PASSION PROJECT</div>
 											<div class="tag">2019</div> -->
 											<div class="img-hover-zoom">
-												<a href="vegout.html">
+												<a href="thrive.html">
 													<div>
 														<img style="width:100%" src="images/vegoutindex.png">
 													</div>
@@ -126,7 +126,7 @@
 													<div class="tag">USER RESEARCH</div>
 													<div class="tag">2019</div> -->
 										<div class="img-hover-zoom">
-											<a href="pawls.html"><img style="width:100%" src="images/pawlsindex.png" alt="Veg Out"></a>
+											<a href="pawls.html"><img style="width:100%" src="images/pawlsindex.png" alt="Thrive"></a>
 
 
 											</div>
