--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	<div class="container">
 
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h2>Hi, I'm Michelle- a product designer who is passionate about helping others by making intentional design decisions.</h2>
+				<h2>Hi, I'm Michelle- a product designer who is passionate about helping others with intentional and thoughtful design decisions.</h2>
 
 					<!-- <h2 style="font-family: 'Montserrat', sans-serif;">Hi. I'm Michelle, a product designer passionate about helping others by creating intentional designs.</h2> -->
 				</div></div>
