--- a/thrive.html
+++ b/thrive.html
@@ -65,13 +65,14 @@
 				<div class="col-md-6 col-sm-6">
 					<br><br><br><br><br><br>
 					<h1 class="title">Thrive- </h1>
+					<h2 class="description">helping people eat less meat</h2><br><br>
+
 				</div>
 <!-- <div><a href="https://kminjin.github.io/documents/vegout_flexport.pdf" class="deckbutton center">PDF Version</a></div> -->
 			<div class="col-md-6 col-sm-6">
 	<br><br><br><br><br><br>
-				<h2 class="description">helping people eat less meat</h2><br><br>
 
-<p>As the sole product designer, I conducted user research, created personas and journey maps, iterated through design concepts, ran usability tests, and built a prototype on Sketch+InVision.	<br><br></p></div>
+<p>As the sole product designer for this five month long side project, I conducted user research, created personas and journey maps, iterated through design concepts, ran usability tests, and built a prototype on Sketch+InVision.	<br><br></p></div>
 
 </div></div>
 </section>
@@ -121,28 +122,6 @@
 
 	</div>
 	</div>	</div>
-</div>
-</section>
-
-
-<section>
-	<div class="container">
-		<div class="content-wrapper2">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<h3 class="subheading">Solution at a Glance</h3>
-
-		<p class="mont">Thrive helps you eat less meat</p>
-
-	</div>
-	</div>	</div>
-</div>
-</section>
-<section>
-	<div class="container">
-		<div class="content-wrappeimg">
-	<img src="images/thriveinfo.png" class="img-responsive">
-</div>
 </div>
 <hr>
 </section>
@@ -447,6 +426,28 @@
 								<img src="images/thrivestyleguide.png" class="img-responsive">
 </div>
 </div></div>
+<hr>
+</section>
+
+<section>
+	<div class="container">
+		<div class="content-wrapper2">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<h3 class="subheading">Solution</h3>
+
+		<p class="mont">Thrive helps you eat less meat</p>
+
+	</div>
+	</div>	</div>
+</div>
+</section>
+<section>
+	<div class="container">
+		<div class="content-wrappeimg">
+	<img src="images/thriveinfo.png" class="img-responsive">
+</div>
+</div>
 <hr>
 </section>
 
