--- a/thrive.html
+++ b/thrive.html
@@ -61,25 +61,24 @@
 
 	<section id="overview">
 		<div class="container">
-			<div class="content-wrapper">
-				<div class="col-md-6 col-sm-6">
-					<br><br><br><br><br><br>
+			<div class="content-wrapper750">
+							<br><br><br><br><br><br>
+				<div class="col-md-4 col-sm-4">
 					<h1 class="title">Thrive- </h1>
 					<h2 class="description">helping people eat less meat</h2><br><br>
 
 				</div>
 <!-- <div><a href="https://kminjin.github.io/documents/vegout_flexport.pdf" class="deckbutton center">PDF Version</a></div> -->
-			<div class="col-md-6 col-sm-6">
-	<br><br><br><br><br><br>
+			<div class="col-md-8 col-sm-8">
 
-<p>As the sole product designer for this five month long side project, I conducted user research, created personas and journey maps, iterated through design concepts, ran usability tests, and built a prototype on Sketch+InVision.	<br><br></p></div>
+<p>As the sole product designer for this five month long side project, I participated in every step of the design process from defining user needs to building the final prototype on Sketch+InVision.	<br><br></p></div>
 
 </div></div>
 </section>
 
 <section>
 	<div class="container">
-		<div class="content-wrapperimg">
+		<div class="content-wrapper750">
 	<img src="images/vegout.png" class="img-responsive"><br>
 </div>
 </div>
@@ -104,9 +103,13 @@
 <section>
 	<div class="container">
 		<div class="content-wrapper2">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 	<img src="images/animalagriculture.png" class="img-responsive">
 </div>
 </div>
+</div>
+</div>
 </section>
 
 
@@ -115,15 +118,16 @@
 		<div class="content-wrapper2">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<h3 class="subheading">Problem</h3>
+		<h3 class="subheading"><br><br>Problem</h3>
 
-		<p class="mont">Help people eat less meat</p>
-<p>I felt moved to help minimize the negative impact of animal farming on our planet. I needed to figure out how I, as a product designer, can help people eat less meat.</p>
+		<p class="mont">How can I help people eat less meat?</p>
+<p>For research, I decided to focus on the quality of information rather than quantity so I opted for interviews over surveys.</p>
+
 
 	</div>
 	</div>	</div>
 </div>
-<hr>
+<br><br><hr>
 </section>
 
 
@@ -132,16 +136,13 @@
 		<div class="content-wrapper2">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h3 class="subheading">Interviews</h3>
+					<h3 class="subheading"><br><br>Interviews</h3>
+					<p>10 semi-structured interviews with 3 vegetarians and 7 omnivores helped me identify the user group's motivations and struggles when it came to vegetarianism.</p>
 
-					<p class="mont">Three Important User Insights</p>
+<p style="font-weight:700;">01- People have varying motivations for wanting to adopt a meat-free diet. <span style="color:#D4D4D4;">Some consider becoming vegetarians for health reasons, while others are more worried about the involved animal cruelty.</p>
+<p style="font-weight:700;">02- As individuals, people believed that the result of their actions on the world was negligible. <span style="color:#D4D4D4;">They were disempowered because they were just one person in a world of 8 billion.</p>
 
-					<p>10 semi-structured interviews with 3 vegeterians and 7 omnivores helped me identify the user group's motivations and struggles when it came to vegetarianism.</p>
-
-<p style="font-weight:700;">01. People have varying motivations for wanting to adopt a meat-free diet. <span style="color:#D4D4D4;">Some want to become vegeterian for health reasons, while others are more concerned with the harmful impact on the environment or animal cruelty.</p>
-<p style="font-weight:700;">02. As individuals, people felt the positive impact of their vegeterian diets would be negligible. <span style="color:#D4D4D4;">They were disempowered because they were just one person in a world of 8 billion.</p>
-
-	<p style="font-weight:700;">03. Omnivores did not have the experience to suddenly become vegeterian without support.<span style="color:#D4D4D4;"> Many did not know how to cook or get the right nutrients from vegeterian meals.</p>
+	<p style="font-weight:700;">03- Omnivores did not have the experience to suddenly become vegetarian and stay vegetarian successfully.<span style="color:#D4D4D4;"> Many did not know how to cook or get the right nutrients from vegetarian meals.<br></p>
 
 	</div>
 	</div>	</div>
@@ -150,14 +151,13 @@
 
 <section>
 	<div class="container">
-		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<div class="content-wrapper3">
+		<div class="content-wrapper750">
 			<div style="background:#E0F0F6">
 								<img src="images/thriveaffinity.png" class="img-responsive">
 								<p class="caption">Affinity Diagram<br></p></div>
 </div>
-</div></div>
+</div>
 </section>
 
 <section>
@@ -167,24 +167,23 @@
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<!-- <h3 class="subheading">Competitive Analysis</h3> -->
 
-		<h3 class="subheading">Competitive Analysis</h3>
+		<h3 class="subheading"><br><br>Competitive Analysis</h3>
 
 		<p class="mont">Problem space was still lacking a solution</p>
 
-<p>Competitive analysis demonstrated that there was not a one-stop resource for people to turn to when deciding to make this significant life style change. The pros and cons are listed below...</p>
+<p>Competitive analysis demonstrated that, currently, there wasn't a one-stop resource for people to turn to when deciding to make this drastic change in their diet.</p>
 
 </p>
 </section>
 
 <section>
 	<div class="container">
-		<div class="content-wrapper3">
-			<div class="row">
+		<div class="content-wrapper750">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 <img src="images/thrivecompetitor.png" class="img-responsive">
 
 	</div>
-	</div>	</div>
+	</div><br><br>
 <hr>
 </section>
 
@@ -193,10 +192,10 @@
 		<div class="content-wrapper2">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<h3 class="subheading">Personas</h3>
-				<p class="mont">User Group's backgrounds are diverse but the way they are motivated is similar:</p>
+		<h3 class="subheading"><br><br>Personas</h3>
+				<!-- <p class="mont">User Group's backgrounds are diverse but the way they are motivated is similar:</p> -->
 
-<p>Users want to be motivated on their meat-free journey by being reminded of their positive impact from eating less meat. Therefore, my solution's first feature became a display of benefits from users' accumulated number of meat-free days.
+<p>Taking insights from the interviews, I created 3 personas that represented the archetypes of the user group. After creating the personas, I decided to use positive reinforcement tactics to support the users during this diet change.
 </p>
 	</div>
 </div>	</div></div>
@@ -204,13 +203,11 @@
 
 <section>
 	<div class="container">
-		<div class="content-wrapper2">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<div class="content-wrapper750">
+				<div style="background:#E0F0F6" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-	<img src="images/personas.png" class="img-responsive">
+	<img src="images/thrivepersonas.png" class="img-responsive">
 </p>
-	</div>
 	</div>	</div>
 </section>
 
@@ -219,11 +216,9 @@
 		<div class="content-wrapper2">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h3 class="subheading">Journey Map</h3>
+					<h3 class="subheading"><br><br>Journey Map</h3>
 
-					<p class="mont">Users need access to vegan recipes</p>
-
-<p>Journey maps helped me realize that a major user painpoint can be remedied if they were given an access to vegan recipes. They not only needed positive encouragement, but also the tool needed to succeed.</p>
+<p>I then mapped out a journey map for each of my personas detailing their actions throughout the day and the potential emotions involved. The journey maps were extremely helpful in helping me visualize the personas' areas of frustration and create focal points in the problem space.</p>
 
 </div></div>
 	</div>	</div>
@@ -231,8 +226,7 @@
 
 <section>
 	<div class="container">
-		<div class="content-wrapper3">
-			<div class="row">
+		<div class="content-wrapper750">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
 	<img src="images/thrivejourneymap.png" class="img-responsive">
@@ -250,10 +244,8 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<h3 class="subheading">Ideation</h3>
-		<p class="mont">Focusing on the MVP</p>
-
-		<p>During the ideation phase is when I decided on core features of my solution, Thrive.</p>
-
+		<p class="mont">Focusing on the MVP</p>		‍
+		<p>Clearly, helping people eliminate meat from their diet was not going to be an easy task. I tried to brainstorm as many ideas as I can during the ideation phase. I then weighed the pros and cons to narrow it down to three core features.
 <p style="font-weight:700;">01. Encourage users to daily log their meat-free days and view concrete metrics about their positive impact on a variety aspects of the world. <span style="color:#D4D4D4;">Categorize the impact by benefit for myself, for others, and for the environment.</p>
 
 <p style="font-weight:700;">02. Allow users to join and create groups so that they can not only feel a sense of togetherness but also friendly competion. <span style="color:#D4D4D4;">Include a leaderboard and total number of meat-free days within group.</p>
@@ -276,9 +268,9 @@
 			<div style="background:#E0F0F6">
 								<img src="images/sketching.png" class="img-responsive">
 								<p class="caption">Sketches<br></p></div>
+
 </div>
 </div></div>
-<hr>
 </section>
 
 <section>
@@ -286,10 +278,10 @@
 		<div class="content-wrapper2">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<h3 class="subheading">User Flow</h3>
+		<h3 class="subheading"><br><br>User Flow</h3>
 		<p class="mont">Defining the skeleton</p>
 
-<p>
+<p>Working out the user flow helped me get a rough idea about how I wanted to map out Thrive from onboarding to finish.
 </p>
 	</div>
 	</div>	</div>
@@ -299,7 +291,7 @@
 
 <section>
 	<div class="container">
-		<div class="content-wrapper3">
+		<div class="content-wrapper750">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<img src="images/thriveflow.png" class="img-responsive"><br>
@@ -317,9 +309,9 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<h3 class="subheading">Paper Prototype</h3>
-		<p class="mont">Weeding out confusing elements</p>
+		<p class="mont">Focusing on higher-level interactions</p>
 
-		<p>After testing the paper protypes with users, I eliminated features such as past history and new goal setting. </p>
+		<p>I decided to start with paper prototypes to help me focus in on the structure and more rudimentary aspects of the app in our initial usability testing. </p>
 
 	</div>
 	</div>	</div>
@@ -473,7 +465,7 @@
 <section>
 	<div class="container">
 
-		<div class="content-wrapper3">
+		<div class="content-wrapper750">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<div>
@@ -497,7 +489,7 @@
 <section>
 	<div class="container">
 
-		<div class="content-wrapper3">
+		<div class="content-wrapper750">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<div>
