--- a/thrive.html
+++ b/thrive.html
@@ -263,6 +263,17 @@
 	<div class="container">
 
 		<div class="content-wrapper2">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+								<img src="images/sketching.png" class="img-responsive">
+
+</div>
+</div>
+</section>
+
+<!-- <section>
+	<div class="container">
+
+		<div class="content-wrapper2">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<div style="background:#E0F0F6">
@@ -271,7 +282,7 @@
 
 </div>
 </div></div>
-</section>
+</section> -->
 
 <section>
 	<div class="container">
