--- a/lexmark.html
+++ b/lexmark.html
@@ -83,7 +83,7 @@
 					<h4 class="normal" style="font-family: 'Quicksand', sans-serif;">May - Aug 2019 </h4>
 					</div>
 </div>
-<div><a href="https://kminjin.github.io/documents/lexmarkdeck.pdf" class="deckbutton center">PDF Version</a></div>
+<!-- <div><a href="https://kminjin.github.io/documents/lexmarkdeck.pdf" class="deckbutton center">PDF Version</a></div> -->
 
 </div>
 
