--- a/thrive.html
+++ b/thrive.html
@@ -70,8 +70,7 @@
 				</div>
 <!-- <div><a href="https://kminjin.github.io/documents/vegout_flexport.pdf" class="deckbutton center">PDF Version</a></div> -->
 			<div class="col-md-8 col-sm-8">
-
-<p>As the sole product designer for this five month long side project, I participated in every step of the design process from defining user needs to building the final prototype on Sketch+InVision.	<br><br></p></div>
+<p>As the sole product designer for this five month long side project, I owned the design process from early stage ideation to a high fidelity prototype on Sketch+InVision.	<br><br></p></div>
 
 </div></div>
 </section>
